[project]
name = "gdpr-agent-poc"
version = "0.1.0"
description = "GDPR Legal Analyst Agent — cloud-agnostic PoC (Chainlit + LangGraph + Qdrant)"
requires-python = ">=3.11"
dependencies = [
    # UI
    "chainlit>=1.3",
    # Agent
    "langchain>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-openai>=0.2",        # OpenAI LLM + embeddings
    "langchain-anthropic>=0.2",     # Anthropic Claude (alternative LLM)
    "langchain-community>=0.3",     # DuckDuckGo web search
    "langgraph>=0.2",
    # Vector store
    "langchain-qdrant>=0.2",
    "qdrant-client>=1.9",
    # Document loading
    "pypdf>=4.0",
    # Config & utilities
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "ddgs>=9.0",
    "rich>=13.0",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
